--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="https://abee55.github.io/CaseStudies-/Return-Runner.html">
-        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/53049487-bf90-4a76-916a-e8258e418510/case+study1.png?"width="400" height="300"/>
+        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/53049487-bf90-4a76-916a-e8258e418510/case+study1.png?"width="400" height="300"alt="woman passing off package to a Return Runner"> 
         <div class="card-copy">
         <h3 class="margin-bottom_five">Return Runner</h3>
         <p class="margin-top_zero">App project developed to Solve Customer Inconvenience when Returning Items .</p>
@@ -67,7 +67,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="Abbey-Ager\CaseStudies\Make-a-wish.html">
-        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/9d8313fb-0860-4f39-a78a-8f236cafec64/case+study2.png?format=750w" width="400" height="300">
+        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/9d8313fb-0860-4f39-a78a-8f236cafec64/case+study2.png?format=750w" width="400" height="300" alt="man and child walking on the beach hand and hand.">
         <div class="card-copy">
         <h3 class="margin-bottom_five">Make A Wish Redesign</h3>
         <a href="https://abee55.github.io/CaseStudies-/Make-a-wish.html">
@@ -81,7 +81,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="">
-        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/1f0a0472-6ce4-4fb8-8240-9685ba4d1210/Case+Study+3.png?format=750w" width="400" height="300">
+        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/1f0a0472-6ce4-4fb8-8240-9685ba4d1210/Case+Study+3.png?format=750w" width="400" height="300" alt="Pyramid scenic view">
         <div class="card-copy">
         <h3 class="margin-bottom_five">Travel App</h3>
         <p class="margin-top_zero">A Travel App Designed to Make Sight-Seeing Easier; Featuring User Research, an Empathy Map, Wireframes, and Storyboard.</p>
@@ -93,7 +93,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="">
-        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/78a5a46f-50a3-4257-9e45-1915422d14c7/case+study+4.png?/400" width="400" height="300">
+        <img src="https://images.squarespace-cdn.com/content/v1/5bd12624e5f7d13d3ae9100e/78a5a46f-50a3-4257-9e45-1915422d14c7/case+study+4.png?/400" width="400" height="300" alt="American flag waving in the wind.">
         <div class="card-copy">
         <h3 class="margin-bottom_five">FCC Website Redesign</h3>
         <p class="margin-top_zero">Website Redesign featuring a More Digestible Layout with More Hierarchy, User Research, and Information Architecture. </p>
